services/search/deploy/ingress/search-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: search-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 8050
